pequenas alterações no layout
